# apps/api/src/main/java/com/zhijiao/foundation/integration/smartbi/SmartBiAssetNotFoundException.java
@@ -1,0 +1,7 @@
+package com.zhijiao.foundation.integration.smartbi;
+
+public class SmartBiAssetNotFoundException extends RuntimeException {
+    public SmartBiAssetNotFoundException(String assetKey) {
+        super("SmartBI asset not found: " + assetKey);
+    }
+}
